migration from level6: ResourceLoader refactoring